--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h2></h2>
     <h2></h2>
     <h2></h2>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, aut ea facere perferendis, vero illum minima facilis placeat dolorem neque odit? Deserunt esse aliquid facilis rem ipsum quasi, repellendus illum.</p>
 </body>
 </html>
